--- a/src/input.css
+++ b/src/input.css
@@ -154,3 +154,54 @@ nav ul li a:hover::after {
   @apply text-[#203239] text-base font-light;
 }
 /* PropertiesTwo Part End */
+
+/* Contact Part Start */
+#contact {
+  @apply bg-[#EEEDDE] py-12 font-poppins;
+}
+.contact {
+  @apply flex items-center justify-between;
+}
+.contactContent h3 {
+  @apply text-[#203239] text-4xl font-semibold pb-[74px];
+}
+.contactNum {
+  @apply flex items-center gap-x-6;
+}
+.call {
+  @apply bg-white px-10 pt-6 pb-[15px] rounded-[10px];
+}
+.callFlex {
+  @apply flex items-center gap-x-7;
+}
+.callFlex i {
+  @apply text-3xl;
+}
+.callFlexNumber {
+  @apply text-[#203239] text-base;
+}
+.callFlexNumber h6 {
+  @apply font-medium pl-2;
+}
+.callBtn {
+  @apply text-center pt-7;
+}
+.call button {
+  @apply text-white text-base font-semibold py-2.5 px-4.5 bg-[#203239] rounded-[5px] cursor-pointer;
+}
+/* Contact Part End */
+
+/* Footer Part Start */
+footer {
+  @apply bg-[#203239] py-8;
+}
+.footer {
+  @apply flex items-center justify-between;
+}
+.footer ul {
+  @apply flex items-center gap-x-[64px];
+}
+.footer ul li a{
+  @apply text-[#EEEDDE] text-2xl;
+}
+/* Footer Part End */
